Text align fix

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -219,6 +219,7 @@ img.user {
     background-color: #f1f1f1;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
 }
 .container.invisible-at-first {
     padding: 30px;
